<resources>
    <string name="app_name">GasFinder</string>
    <string name="gasolina95label">Gasolina 95 E5</string>
    <string name="dieselAlabel">Diesel A</string>
    <string name="refresh">Recargar</string>
    <string name="info">Info</string>
    <string name="loadCorrect">Se han cargado %d gasolineras</string>
    <string name="loadErrorRed">Ha habido un error cargando las gasolineras, por favor compruebe su conexión</string>
    <string name="loadErrorServidor">Ha habido un error cargando las gasolineras, el servicio remoto se ha caído</string>
    <string name="precio">Precio</string>
    <string name="filtrar">Filtrar</string>
    <string name="boton_para_resetear_los_filtros">boton para resetear los filtros</string>
    <string name="mostrar_resultados">Mostrar Resultados</string>
    <string name="resetear">Resetear</string>
    <string name="boton_para_subir_el_precio">Boton para subir el precio</string>
    <string name="boton_para_bajar_el_precio">Boton para bajar el precio</string>

    <string-array name="combustiblesArray">
        <item>Todos</item>
        <item>Gasolina 95 E5</item>
        <item>Gasolina 95 E10</item>
        <item>Gasolina 95 E5 Premium</item>
        <item>Gasolina 98 E5</item>
        <item>Gasolina 98 E10</item>
        <item>Gasóleo A habitual</item>
        <item>Gasóleo Premium</item>
        <item>Gasóleo B</item>
        <item>Bioetanol</item>
        <item>Biodiésel</item>
        <item>Gases licuados del petróleo</item>
        <item>Gas natural comprimido</item>
        <item>Gas natural licuado</item>
        <item>Hidrógeno</item>
    </string-array>

    <string-array name="comunidadesArray">
        <item>Todas</item>
        <item>Cantabria</item>
        <item>Andalucia</item>
        <item>Aragón</item>
        <item>Asturias</item>
        <item>Baleares</item>
        <item>Canarias</item>
        <item>Castilla la Mancha</item>
        <item>Castilla y Leon</item>
        <item>Cataluña</item>
        <item>Comunidad Valenciana</item>
        <item>Extremadura</item>
        <item>Galicia</item>
        <item>Madrid</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>País Vasco</item>
        <item>Rioja</item>
        <item>Ceuta</item>
        <item>Melilla</item>
    </string-array>
    <string name="lista_de_gasolineras">Gasolineras</string>
    <string name="filtros_permanentes">Configuración</string>
    <string name="no_gasolineras_con_filtros">No se han podido cargar gasolineras con los filtros seleccionados</string>
    <string name="filtrar_por_marca">Filtrar Por Marca</string>
    <string name="filtrar_por_precio">Filtrar Por Precio</string>
    <string name="filtros">Filtros</string>
    <string name="favoritas">FAVORITAS</string>

    <string-array name="marcasArray">
        <item>Todas</item>
        <item>AVIA</item>
        <item>CAMPSA</item>
        <item>CARREFOUR</item>
        <item>CEPSA</item>
        <item>GALP</item>
        <item>PETRONOR</item>
        <item>REPSOL</item>
        <item>SHELL</item>
    </string-array>
</resources>